--- a/custom_components/wapi/manifest.json
+++ b/custom_components/wapi/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "wapi",
-  "name": "wapi notifier based on https://github.com/chrishubert/whatsapp-api and can send notifications to whatsapp groups and contacts",
+  "name": "wapi notifier based on https://github.com/chrishubert/whatsapp-api",
   "codeowners": ["@t0mer"],
   "documentation": "https://github.com/t0mer/wapi-custom-notifier",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/t0mer/wapi-custom-notifier",
   "requirements": ["requests"],
-  "version": "0.2.0"
+  "version": "0.2.5"
 }
